# text2audio

./: .gitignore  Cargo.toml  README.md
assets/: text.md
examples/: ai_splitter.rs  custom_voice.rs  from_file.rs  long_text.rs  parallel.rs  play_audio.rs  simple.rs
src/: ai_splitter.rs  audio_merger.rs  client.rs  config.rs  error.rs  lib.rs
