[package]
name = "text2audio"
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/AnlangA/text2audio"
description = "A modern Rust crate for converting text to audio with AI-powered segmentation"
keywords = ["text-to-speech", "tts", "audio", "ai", "glm"]
categories = ["multimedia::audio", "api-bindings"]

[dependencies]
zai-rs = "0.1.10"
hound = "3.5"
tokio = { version = "1", features = ["full"] }
thiserror = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"

[[example]]
name = "simple"
path = "examples/simple.rs"

[[example]]
name = "custom_voice"
path = "examples/custom_voice.rs"

[[example]]
name = "long_text"
path = "examples/long_text.rs"

[[example]]
name = "ai_splitter"
path = "examples/ai_splitter.rs"

[[example]]
name = "parallel"
path = "examples/parallel.rs"

[[example]]
name = "from_file"
path = "examples/from_file.rs"

[[example]]
name = "play_audio"
path = "examples/play_audio.rs"

[dev-dependencies]
